--- a/about.html
+++ b/about.html
@@ -82,7 +82,7 @@ https://templatemo.com/tm-580-woox-travel
             <div class="blur-bg"></div>
             <h4>EXPLORE OUR city</h4>
             <div class="line-dec"></div>
-            <h2>Welcome To Giza</h2>
+            <h2>Welcome To Hurghada</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt uttersi labore et dolore magna aliqua is ipsum suspendisse ultrices gravida</p>
             <div class="main-button">
               <a href="reservation.html">Discover More</a>
@@ -100,56 +100,56 @@ https://templatemo.com/tm-580-woox-travel
         <div class="slider-content">
           <div class="row">
             <div class="col-lg-12">
-              <h2>Giza’s <em>Cities &amp; Towns</em></h2>
+              <h2>Hurghada’s <em>Explore</em></h2>
             </div>
             <div class="col-lg-12">
               <div class="owl-cites-town owl-carousel">
                 <div class="item">
                   <div class="thumb">
-                    <img src="assets/images/cities-01.jpg" alt="">
-                    <h4>Havana</h4>
+                    <img src="assets/images/explore-01.jpg" alt="">
+                    <h4>Yakht</h4>
                   </div>
                 </div>
                 <div class="item">
                   <div class="thumb">
-                    <img src="assets/images/cities-02.jpg" alt="">
-                    <h4>Kingston</h4>
+                    <img src="assets/images/explore-02.jpg" alt="">
+                    <h4>Snorkling</h4>
                   </div>
                 </div>
                 <div class="item">
                   <div class="thumb">
-                    <img src="assets/images/cities-03.jpg" alt="">
-                    <h4>George Town</h4>
+                    <img src="assets/images/explore-03.jpg" alt="">
+                    <h4>Coral reefs</h4>
                   </div>
                 </div>
                 <div class="item">
                   <div class="thumb">
-                    <img src="assets/images/cities-04.jpg" alt="">
-                    <h4>Santo Domingo</h4>
+                    <img src="assets/images/explore-04.jpg" alt="">
+                    <h4>Safari</h4>
                   </div>
                 </div>
                 <div class="item">
                   <div class="thumb">
-                    <img src="assets/images/cities-01.jpg" alt="">
-                    <h4>Havana</h4>
+                    <img src="assets/images/explore-01.jpg" alt="">
+                    <h4>Yakht</h4>
                   </div>
                 </div>
                 <div class="item">
                   <div class="thumb">
-                    <img src="assets/images/cities-02.jpg" alt="">
-                    <h4>Kingston</h4>
+                    <img src="assets/images/explore-02.jpg" alt="">
+                    <h4>Snorkling</h4>
                   </div>
                 </div>
                 <div class="item">
                   <div class="thumb">
-                    <img src="assets/images/cities-03.jpg" alt="">
-                    <h4>George Town</h4>
+                    <img src="assets/images/explore-03.jpg" alt="">
+                    <h4>Coral reefs</h4>
                   </div>
                 </div>
                 <div class="item">
                   <div class="thumb">
-                    <img src="assets/images/cities-04.jpg" alt="">
-                    <h4>Santo Domingo</h4>
+                    <img src="assets/images/explore-04.jpg" alt="">
+                    <h4>Safari</h4>
                   </div>
                 </div>
               </div>
@@ -179,7 +179,7 @@ https://templatemo.com/tm-580-woox-travel
               <div class="thumb">
                 <img src="assets/images/offers-01.jpg" alt="">
                 <div class="text">
-                  <h4>Havana<br><span><i class="fa fa-users"></i> 234 Check Ins</span></h4>
+                  <h4>Yakht<br><span><i class="fa fa-users"></i> 234 Check Ins</span></h4>
                   <h6>$420<br><span>/person</span></h6>
                   <div class="line-dec"></div>
                   <ul>
@@ -198,7 +198,7 @@ https://templatemo.com/tm-580-woox-travel
               <div class="thumb">
                 <img src="assets/images/offers-02.jpg" alt="">
                 <div class="text">
-                  <h4>Kingston<br><span><i class="fa fa-users"></i> 234 Check Ins</span></h4>
+                  <h4>Snorkling<br><span><i class="fa fa-users"></i> 234 Check Ins</span></h4>
                   <h6>$420<br><span>/person</span></h6>
                   <div class="line-dec"></div>
                   <ul>
@@ -217,7 +217,7 @@ https://templatemo.com/tm-580-woox-travel
               <div class="thumb">
                 <img src="assets/images/offers-03.jpg" alt="">
                 <div class="text">
-                  <h4>George Town<br><span><i class="fa fa-users"></i> 234 Check Ins</span></h4>
+                  <h4>Coral reefs<br><span><i class="fa fa-users"></i> 234 Check Ins</span></h4>
                   <h6>$420<br><span>/person</span></h6>
                   <div class="line-dec"></div>
                   <ul>
@@ -236,7 +236,7 @@ https://templatemo.com/tm-580-woox-travel
               <div class="thumb">
                 <img src="assets/images/offers-01.jpg" alt="">
                 <div class="text">
-                  <h4>Havana<br><span><i class="fa fa-users"></i> 234 Check Ins</span></h4>
+                  <h4>Yakht<br><span><i class="fa fa-users"></i> 234 Check Ins</span></h4>
                   <h6>$420<br><span>/person</span></h6>
                   <div class="line-dec"></div>
                   <ul>
@@ -255,7 +255,7 @@ https://templatemo.com/tm-580-woox-travel
               <div class="thumb">
                 <img src="assets/images/offers-02.jpg" alt="">
                 <div class="text">
-                  <h4>Kingston<br><span><i class="fa fa-users"></i> 234 Check Ins</span></h4>
+                  <h4>Snorkling<br><span><i class="fa fa-users"></i> 234 Check Ins</span></h4>
                   <h6>$420<br><span>/person</span></h6>
                   <div class="line-dec"></div>
                   <ul>
@@ -274,7 +274,7 @@ https://templatemo.com/tm-580-woox-travel
               <div class="thumb">
                 <img src="assets/images/offers-03.jpg" alt="">
                 <div class="text">
-                  <h4>George Town<br><span><i class="fa fa-users"></i> 234 Check Ins</span></h4>
+                  <h4>Coral reefs<br><span><i class="fa fa-users"></i> 234 Check Ins</span></h4>
                   <h6>$420<br><span>/person</span></h6>
                   <div class="line-dec"></div>
                   <ul>
@@ -350,7 +350,7 @@ https://templatemo.com/tm-580-woox-travel
       <div class="row">
         <div class="col-lg-6 offset-lg-3">
           <div class="section-heading text-center">
-            <h2>Best Locations In Gizas</h2>
+            <h2>Best Locations In Hurghadas</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore.</p>
           </div>
         </div>
@@ -363,7 +363,7 @@ https://templatemo.com/tm-580-woox-travel
                      <i class="fas fa-expand"></i>
                   </div>
                   <div class="info">
-                     <div class="main">Havana</div>
+                     <div class="main">Yakht</div>
                      <div class="sub">Population: 2M</div>
                   </div>
                </div>
@@ -375,7 +375,7 @@ https://templatemo.com/tm-580-woox-travel
                     <i class="fas fa-expand"></i>
                   </div>
                   <div class="info">
-                     <div class="main">Kingston</div>
+                     <div class="main">Snorkling</div>
                      <div class="sub">Population: 3.5M</div>
                   </div>
                </div>
