--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@ https://templatemo.com/tm-580-woox-travel
                   <div class="row">
                     <div class="col-lg-4 col-sm-5">
                       <div class="image">
-                        <img src="assets/images/city-01.jpg" alt="">
+                        <img src="assets/images/cities-01.jpg" alt="">
                       </div>
                     </div>
                     <div class="col-lg-8 col-sm-7">
@@ -287,7 +287,7 @@ https://templatemo.com/tm-580-woox-travel
                   <div class="row">
                     <div class="col-lg-4 col-sm-5">
                       <div class="image">
-                        <img src="assets/images/city-02.jpg" alt="">
+                        <img src="assets/images/cities-02.jpg" alt="">
                       </div>
                     </div>
                     <div class="col-lg-8 col-sm-7">
@@ -316,7 +316,7 @@ https://templatemo.com/tm-580-woox-travel
                   <div class="row">
                     <div class="col-lg-4 col-sm-5">
                       <div class="image">
-                        <img src="assets/images/city-03.jpg" alt="">
+                        <img src="assets/images/cities-03.jpg" alt="">
                       </div>
                     </div>
                     <div class="col-lg-8 col-sm-7">
@@ -357,7 +357,7 @@ https://templatemo.com/tm-580-woox-travel
             <div class="row">
               <div class="col-lg-12">
                 <div id="map">
-                  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12469.776493332698!2d-80.14036379941481!3d25.907788681148624!2m3!1f357.26927939317244!2f20.870722720054623!3f0!3m2!1i1024!2i768!4f35!3m3!1m2!1s0x88d9add4b4ac788f%3A0xe77469d09480fcdb!2sSunny%20Isles%20Beach!5e1!3m2!1sen!2sth!4v1642869952544!5m2!1sen!2sth" width="100%" height="550px" frameborder="0" style="border:0; border-radius: 23px; " allowfullscreen=""></iframe>
+                  <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d454251.2275856797!2d33.50151086010095!3d27.192836913379992!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2seg!4v1674850952329!5m2!1sen!2seg" width="100%" height="550px" frameborder="0" style="border:0; border-radius: 23px; " allowfullscreen=""></iframe>
                 </div>
               </div>
             </div>
