--- a/deals.html
+++ b/deals.html
@@ -98,15 +98,15 @@ https://templatemo.com/tm-580-woox-travel
                   <fieldset>
                       <select name="Location" class="form-select" aria-label="Default select example" id="chooseLocation" onChange="this.form.click()">
                           <option selected>Destinations</option>
-                          <option type="checkbox" name="option1" value="Italy">Italy</option>
+                          <option type="checkbox" name="option1" value="Mansoura">Mansoura</option>
                           <option value="Alexandria">Alexandria</option>
                           <option value="Hurghada">Hurghada</option>
                           <option value="Luxor">Luxor</option>
-                          <option value="Australia">Australia</option>
-                          <option value="India">India</option>
-                          <option value="Indonesia">Indonesia</option>
-                          <option value="Malaysia">Malaysia</option>
-                          <option value="Singapore">Singapore</option>
+                          <option value="Sharm El-sheikh">Sharm El-sheikh</option>
+                          <option value="Saint Katrin">Saint Katrin</option>
+                          <option value="Cairo">Cairo</option>
+                          <option value="Fayoum">Fayoum</option>
+                          <option value="Aswan">Aswan</option>
                       </select>
                   </fieldset>
               </div>
@@ -154,7 +154,7 @@ https://templatemo.com/tm-580-woox-travel
               <div class="col-lg-6 align-self-center">
                 <div class="content">
                   <span class="info">*Limited Offer Today</span>
-                  <h4>Glasgow City Lorem</h4>
+                  <h4>Fayoum City Lorem</h4>
                   <div class="row">
                     <div class="col-6">
                       <i class="fa fa-clock"></i>
@@ -185,7 +185,7 @@ https://templatemo.com/tm-580-woox-travel
               <div class="col-lg-6 align-self-center">
                 <div class="content">
                   <span class="info">*Today & Tomorrow Only</span>
-                  <h4>Venezia Italy Ipsum</h4>
+                  <h4>Aswan city Ipsum</h4>
                   <div class="row">
                     <div class="col-6">
                       <i class="fa fa-clock"></i>
@@ -216,7 +216,7 @@ https://templatemo.com/tm-580-woox-travel
               <div class="col-lg-6 align-self-center">
                 <div class="content">
                   <span class="info">**Undefined</span>
-                  <h4>Glasgow City Lorem</h4>
+                  <h4>Mansoura City Lorem</h4>
                   <div class="row">
                     <div class="col-6">
                       <i class="fa fa-clock"></i>
@@ -247,7 +247,7 @@ https://templatemo.com/tm-580-woox-travel
               <div class="col-lg-6 align-self-center">
                 <div class="content">
                   <span class="info">*Offer Until 24th March</span>
-                  <h4>Glasgow City Lorem</h4>
+                  <h4>Saint Katrin City Lorem</h4>
                   <div class="row">
                     <div class="col-6">
                       <i class="fa fa-clock"></i>
